# thermavibe

./: .editorconfig  .env.example  .env.production  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 672b4ee7_add_price_to_access_codes.py  7bf4bbccb2f1_add_access_codes_table.py  a3f7c2e1b8d4_add_photobooth_support.py  d596d3d1a363_initial.py  e7a2f1b4c8d9_add_review_state_and_photos.py
backend/app/: main.py
backend/app/ai/: __init__.py  anthropic_provider.py  base.py  google_provider.py  mock_provider.py  ollama_provider.py  openai_provider.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  events.py  exceptions.py  lifecycle.py  middleware.py  security.py
backend/app/models/: __init__.py  access_code.py  analytics.py  base.py  configuration.py  device.py  payment.py  photobooth_theme.py  session.py
backend/app/payment/: __init__.py  base.py  midtrans_provider.py  mock_provider.py  xendit_provider.py
backend/app/schemas/: __init__.py  access_code.py  admin.py  ai.py  camera.py  common.py  config.py  kiosk.py  payment.py  photobooth.py  print.py
backend/app/services/: access_code_service.py  ai_service.py  analytics_service.py  camera_service.py  config_service.py  hardware_service.py  image_composition_service.py  payment_service.py  photobooth_service.py  printer_service.py  retention_service.py  session_service.py  share_page.py  (+2 more)
backend/tests/: conftest.py
(+202 files in other folders)
